--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
 server.port=8081
